# fastapi_mcp_agent_service

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_approval_requests.py  003_add_database_indexes.py
docker/: Dockerfile.dev  docker-compose.yml
docs/: AGENTS.md  API.md  EXAMPLES.md  INDEXING.md  MCP_TOOLS.md  SETUP.md
scripts/: cleanup.py  init_db.py  seed_data.py  validate_env.py
src/: main.py
src/agents/: base_agent.py  data_processor_agent.py  orchestrator.py  query_agent.py  research_agent.py
src/api/: auth.py  dependencies.py  exceptions.py  metrics.py  middleware.py  rate_limiter.py
src/config/: celery_app.py  logger.py  settings.py
src/database/: connection.py  crud.py  models.py  queries.py
src/mcp_tools/: api_tool.py  base.py  calculator_tool.py  database_tool.py  file_tool.py  search_tool.py  tools_registry.py
src/models/: request.py  response.py  schemas.py
src/services/: agent_service.py  approval_service.py  cache_service.py  llm_service.py  memory_service.py  notification_service.py  task_service.py
src/tasks/: agent_tasks.py
src/utils/: decorators.py  helpers.py  serializers.py  validators.py
tests/: conftest.py
tests/fixtures/: mock_tools.py  sample_data.py
tests/integration/: test_agent_execution.py  test_api_endpoints.py  test_mcp_integration.py
tests/unit/: test_agents.py  test_approval_service.py  test_auth.py  test_database.py  test_decorators.py  test_exceptions.py  (+6 more)
(+5 files in other folders)
